<resources>
    <string name="app_name">Boucinho</string>
    <string name="event_title">Event title</string>
    <string name="event_details">Event details</string>
    <string name="more">More</string>
    <string name="details">Details</string>
    <string name="title">Title</string>
    <string name="location">Lieu</string>
    <string name="no_date_specified">No date specified</string>
    <string name="date">Date</string>
    <string name="hour">Heure</string>
    <string name="no_hour_specified">No hour specified</string>
    <string name="event_date">2019/05/05, dim 12h19</string>
    <string name="event_location">Event location</string>
    <string name="add_an_event">Ajouter un evenement</string>
    <string name="edit_an_event">Modifier un evenement</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <!--Event types-->
    <string name="concert">Concert</string>
    <string name="open_mic">Open mic</string>
    <string name="radio">Radio</string>
    <string name="repetition">Repetition</string>
    <string name="meeting">Reunion</string>
    <string name="studio">Studio</string>
    <string name="work">Atelier</string>
    <string name="other">Other</string>

    <string name="event_type_prompt">Choisir un type</string>
    <string name="upcoming_events">À venir</string>
    <string name="all_events">Tous</string>
    <string name="duration">Durée</string>
    <string name="in_minutes">(en minutes)</string>
    <string name="detail">Details</string>
    <string name="guests">Invités</string>
    <string name="warning">Attention</string>
    <string name="event_confirm_delete">Voulez-vous vraiment supprimer cet evenement ?</string>
    <string name="event_cancel_modification">Si vous quittez, les modifications seront perdues.\nVoulez-vous quitter ?</string>
    <string-array name="event_types">
        <item>@string/concert</item>
        <item>@string/repetition</item>
        <item>@string/studio</item>
        <item>@string/radio</item>
        <item>@string/open_mic</item>
        <item>@string/meeting</item>
        <item>@string/work</item>
        <item>@string/other</item>
    </string-array>
</resources>
