<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_event_title"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:inputType="textCapSentences"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/details">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_event_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences|textMultiLine"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <com.boucinho.views.TextWithLabel
            android:id="@+id/add_event_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            app:labelField="Date"
            app:textValue="@string/no_date_specified" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_event_pick_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_weight="1"
            android:text="@string/date"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <com.boucinho.views.TextWithLabel
            android:id="@+id/add_event_hour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            app:labelField="Heure"
            app:textValue="@string/no_hour_specified" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_event_pick_hour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_weight="1"
            android:text="@string/hour"/>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_event_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences|textMultiLine"/>

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>