<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_separator"
            android:layout_width="2dp"
            android:layout_margin="2dp"
            android:orientation="horizontal"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:padding="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorAccent"
        android:layout_margin="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.boucinho.views.TextWithLabel
            android:id="@+id/twl_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:labelField="@string/detail"
            android:layout_marginBottom="4dp"/>

        <com.boucinho.views.TextWithLabel
            android:id="@+id/twl_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:labelField="@string/date"
            android:layout_marginBottom="4dp"/>

        <com.boucinho.views.TextWithLabel
            android:id="@+id/twl_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:labelField="@string/duration"
            android:layout_marginBottom="4dp"/>

        <com.boucinho.views.TextWithLabel
            android:id="@+id/twl_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:labelField="@string/location"
            android:layout_marginBottom="4dp"/>

        <com.boucinho.views.TextWithLabel
            android:id="@+id/twl_guests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:labelField="@string/guests"
            android:layout_marginBottom="4dp"/>

    </LinearLayout>

</LinearLayout>