<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <Spinner
        android:id="@+id/spinner_event_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:prompt="@string/event_type_prompt"
        android:entries="@array/event_types"
        android:layout_marginVertical="4dp"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_event_title"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:inputType="textCapSentences"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/details">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_event_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences|textMultiLine"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.boucinho.views.timepickers.MyTimePicker
        android:id="@+id/mtp_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.boucinho.views.timepickers.DurationPicker
        android:id="@+id/dp_event_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_event_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences|textMultiLine"/>

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
<!--98-->